--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
     <meta name="description"
           content="熊猫TV提供高清、流畅的视频、活动、赛事直播服务，不仅包含英雄联盟lol直播，炉石传说直播，dota2直播等游戏直播，更有大型活动直播、演唱会直播、美女直播，内容丰富，精彩直播尽在最娱乐的熊猫TV。">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
-
+    
 </head>
 <body>
 	<div id="app">
-		<a v-link="{ path: '/index' }">Go to index</a>
-    	<a v-link="{ path: '/detail' }">Go to detail</a>
+		<a v-link="{ path: '/index' }">首页</a>
+    	<a v-link="{ path: '/detail' }">404</a>
         <router-view></router-view>
     </div>
 	<!-- jquery -->
