--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,9 @@
 <head>
     <meta name="renderer" content="webkit" />
     <meta charset="UTF-8">
-    <title>zhihuDaily</title>
-    <meta name="keywords" content="游戏直播,手机游戏直播,电子竞技直播,热门游戏直播,熊猫直播,pandatv,熊猫tv,lol直播,炉石传说直播,dota2直播">
-    <meta name="description"
-          content="熊猫TV提供高清、流畅的视频、活动、赛事直播服务，不仅包含英雄联盟lol直播，炉石传说直播，dota2直播等游戏直播，更有大型活动直播、演唱会直播、美女直播，内容丰富，精彩直播尽在最娱乐的熊猫TV。">
+    <meta name="referrer" content="no-referrer">
+    <meta name=format-detection content="telephone=no, email=no">
+    <title>知乎日报VUE版</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
     <script>
         (function (win, lib) {
@@ -141,8 +140,6 @@
 </head>
 <body>
 	<div id="app">
-		<a v-link="{ path: '/index' }">首页</a>
-    	<a v-link="{ path: '/detail' }">404</a>
         <router-view></router-view>
     </div>
 	<!-- jquery -->
